Fix HTTP server shutdown hook to pass the required stop delay